tdf#104788 write xshear & to attribute

Change-Id: I2cdaf18424b7f2e5b5e1fe81a9f504f36773eff3
Reviewed-on: https://gerrit.libreoffice.org/42948
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Szymon Kłos <szymon.klos@collabora.com>
Reviewed-on: https://gerrit.libreoffice.org/43117
Reviewed-by: Andras Timar <andras.timar@collabora.com>
Tested-by: Andras Timar <andras.timar@collabora.com>