sd/source/filter/eppt/pptx-epptooxml.cxx
@@ -981,6 +981,12 @@ void PowerPointExport::WriteAnimationAttributeName( const FSHelperPtr& pFS, cons
         pFS->writeEscaped("style.color");
         pFS->endElementNS(XML_p, XML_attrName);
     }
+    if (rAttributeName == "SkewX")
+    {
+        pFS->startElementNS(XML_p, XML_attrName, FSEND);
+        pFS->writeEscaped("xshear");
+        pFS->endElementNS(XML_p, XML_attrName);
+    }
     else
     {
         SAL_INFO("sd.eppt", "unhandled animation attribute name: " << rAttributeName);
@@ -1022,6 +1028,7 @@ void PowerPointExport::WriteAnimationNodeAnimate( const FSHelperPtr& pFS, const 
     const char* pCalcMode = nullptr;
     const char* pValueType = nullptr;
     bool bSimple = ( nXmlNodeType != XML_anim );
+    bool bTo = true;
 
     if( !bSimple ) {
     switch( rXAnimate->getCalcMode() ) {
@@ -1104,17 +1111,35 @@ void PowerPointExport::WriteAnimationNodeAnimate( const FSHelperPtr& pFS, const 
     }
     else
     {
-        pFS->startElementNS(XML_p, nXmlNodeType,
-                            XML_calcmode, pCalcMode,
-                            XML_valueType, pValueType,
-                            FSEND);
+        OUString sTo;
+        if (rXAnimate.is() && nXmlNodeType == XML_anim)
+        {
+            rXAnimate->getTo() >>= sTo;
+        }
+        if (!sTo.isEmpty())
+        {
+            pFS->startElementNS(XML_p, nXmlNodeType,
+                XML_calcmode, pCalcMode,
+                XML_valueType, pValueType,
+                XML_to, USS(sTo),
+                FSEND);
+
+            bTo = false;
+        }
+        else
+        {
+            pFS->startElementNS(XML_p, nXmlNodeType,
+                XML_calcmode, pCalcMode,
+                XML_valueType, pValueType,
+                FSEND);
+        }
     }
 
-    WriteAnimationNodeAnimateInside(pFS, rXNode, bMainSeqChild, bSimple);
+    WriteAnimationNodeAnimateInside(pFS, rXNode, bMainSeqChild, bSimple, bTo);
     pFS->endElementNS(XML_p, nXmlNodeType);
 }
 
-void PowerPointExport::WriteAnimationNodeAnimateInside( const FSHelperPtr& pFS, const Reference< XAnimationNode >& rXNode, bool bMainSeqChild, bool bSimple )
+void PowerPointExport::WriteAnimationNodeAnimateInside( const FSHelperPtr& pFS, const Reference< XAnimationNode >& rXNode, bool bMainSeqChild, bool bSimple, bool bWriteTo)
 {
     Reference< XAnimate > rXAnimate( rXNode, UNO_QUERY );
     if( !rXAnimate.is() )
@@ -1150,7 +1175,8 @@ void PowerPointExport::WriteAnimationNodeAnimateInside( const FSHelperPtr& pFS, 
     WriteAnimationAttributeName( pFS, rXAnimate->getAttributeName() );
     pFS->endElementNS( XML_p, XML_cBhvr );
     WriteAnimateValues( pFS, rXAnimate );
-    WriteAnimateTo( pFS, rXAnimate->getTo(), rXAnimate->getAttributeName() );
+    if( bWriteTo )
+        WriteAnimateTo( pFS, rXAnimate->getTo(), rXAnimate->getAttributeName() );
 }
 
 void PowerPointExport::WriteAnimationCondition( const FSHelperPtr& pFS, const char* pDelay, const char* pEvent, double fDelay, bool bHasFDelay )
